# blackjack-pypi

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  run.py
blackjack_multi/: __init__.py  cards.py  game.py  player.py  types.py
