[tool.poetry]
name = "blackjack-multi"
version = "0.1.6"
description = "a python package for multiplayer blackjack gameplay"
authors = ["Peter Simone <plssimone@gmail.com>"]
maintainers = ["Peter Simone <plssimone@gmail.com>"]
repository = "https://github.com/petersim1/blackjack-pypi"
keywords = ["blackjack"]
readme = "README.md"
license = "MIT"

[project]
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
